--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
         }
     </style>
 </head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4NLKRMF16H"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-4NLKRMF16H');
+</script>
 <body>
     <div class="container">
         <h1>Ben Cohen-Wang</h1>
