--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
                         |
                         <a href="https://gradientscience.org/contextcite-applications" target="_blank">Blog Post #2</a>
                         |
+                        <a href="https://huggingface.co/spaces/contextcite/context-cite" target="_blank">Demo</a>
+                        |
                         <a href="https://github.com/MadryLab/context-cite" target="_blank">Python package</a>
                     </p>
                 </div>
