--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         I received my BS in computer science from <a href="https://stanford.edu" target="_blank">Stanford</a>, and spent two great years at <a href="https://robustintelligence.com" target="_blank">Robust Intelligence</a> before starting my PhD.
                     </p>
                     <p>
-                        I am interested in how we can develop machine learning models that can be safely deployed, with a focus on robustness to distribution shifts. In particular, I would like to understand how we can harness large-scale pre-training (e.g., CLIP, GPT) to develop robust task-specific models.
+                        I am interested in how we can develop machine learning systems that can be safely deployed.
                         Outside of research, I enjoy climbing, skiing, tennis and volleyball.
                     </p>
                 </div>
