--- a/index.html
+++ b/index.html
@@ -172,13 +172,13 @@
     <div class="header-bar">
         <h1>Ben Cohen-Wang</h1>
         <div class="contact-info">
-            <span><a href="mailto:bencw@mit.edu" class="contact-link">bencw@mit.edu</a></span>
+            <span><a href="mailto:bencw@mit.edu" class="contact-link">Contact ✉️</a></span>
             <span class="vertical-line">|</span>
-            <span><a href="https://x.com/bcohenwang" target="_blank" class="contact-link">Twitter</a></span>
+            <span><a href="https://x.com/bcohenwang" target="_blank" class="contact-link">Twitter 🐦</a></span>
             <span class="vertical-line">|</span>
-            <span><a href="https://scholar.google.com/citations?user=QwJR7jEAAAAJ&hl" target="_blank" class="contact-link">Google Scholar</a></span>
+            <span><a href="https://scholar.google.com/citations?user=QwJR7jEAAAAJ&hl" target="_blank" class="contact-link">Google Scholar 📚</a></span>
             <span class="vertical-line">|</span>
-            <span><a href="https://www.linkedin.com/in/ben-cohen-wang-b8a81211a/" target="_blank" class="contact-link">LinkedIn</a></span>
+            <span><a href="https://www.linkedin.com/in/ben-cohen-wang-b8a81211a/" target="_blank" class="contact-link">LinkedIn 💼</a></span>
         </div>
         <div style="flex: 1"></div>
     </div>
