--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
         .profile-picture { 
             max-width: 240px; 
             margin-left: 30px;
-            transition: transform 0.3s ease;
+            /* transition: transform 0.3s ease; */
         }
-        .profile-picture:hover {
+        /* .profile-picture:hover {
             transform: scale(1.05);
-        }
+        } */
         .profile-content { 
             display: flex; 
             align-items: center;
@@ -78,14 +78,17 @@
             transition: background-color 0.3s ease;
             border-bottom: 1px solid var(--header-border);
             display: flex;
+            flex-wrap: wrap;
             justify-content: space-between;
             align-items: center;
+            gap: 15px;
         }
         .header-bar h1 {
             margin: 0;
             text-align: left;
             font-size: 2.0rem;
             flex: 1;
+            min-width: 200px;
         }
         .contact-info {
             display: flex;
@@ -93,12 +96,8 @@
             flex: 2;
             justify-content: center;
             font-size: 1.1rem;
-        }
-        .vertical-line {
-            margin-left: 10px;
-            margin-right: 10px;
-            color: var(--text-color);
-            opacity: 0.5;
+            gap: 15px;
+            flex-wrap: wrap;
         }
         .publication {
             padding: 15px;
@@ -130,14 +129,18 @@
             text-decoration: none;
             transition: all 0.3s ease;
             cursor: pointer;
-            padding: 5px 10px;
-            border-radius: 4px;
+            padding: 8px 16px;
+            border-radius: 20px;
+            background-color: var(--hover-bg);
+            border: 1px solid var(--link-color);
+            white-space: nowrap;
         }
         .contact-link:hover {
             color: var(--link-hover-color);
             text-decoration: none;
-            background-color: var(--hover-bg);
-            padding: 5px 10px;
+            background-color: var(--bg-color);
+            border-color: var(--link-hover-color);
+            transform: translateY(-2px);
         }
 
         .theme-toggle {
@@ -158,6 +161,28 @@
         .theme-toggle:hover {
             opacity: 0.8;
         }
+
+        @media (max-width: 768px) {
+            .header-bar {
+                padding: 15px;
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+            }
+            
+            .header-bar h1 {
+                margin-bottom: 10px;
+            }
+
+            .contact-info {
+                justify-content: center;
+                width: 100%;
+            }
+
+            body {
+                padding-top: 180px;
+            }
+        }
     </style>
 </head>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-4NLKRMF16H"></script>
@@ -173,11 +198,8 @@
         <h1>Ben Cohen-Wang</h1>
         <div class="contact-info">
             <span><a href="mailto:bencw@mit.edu" class="contact-link">Contact ✉️</a></span>
-            <span class="vertical-line">|</span>
             <span><a href="https://x.com/bcohenwang" target="_blank" class="contact-link">Twitter 🐦</a></span>
-            <span class="vertical-line">|</span>
             <span><a href="https://scholar.google.com/citations?user=QwJR7jEAAAAJ&hl" target="_blank" class="contact-link">Google Scholar 📚</a></span>
-            <span class="vertical-line">|</span>
             <span><a href="https://www.linkedin.com/in/ben-cohen-wang-b8a81211a/" target="_blank" class="contact-link">LinkedIn 💼</a></span>
         </div>
         <div style="flex: 1"></div>
@@ -254,6 +276,11 @@
                     <p><strong>Benjamin Cohen-Wang</strong>, Stephen Mussmann, Alex Ratner, Christopher Ré</p>
                     <p onclick="event.stopPropagation()"><a href="files/kdd2019_dcclworkshop.pdf" target="_blank">Paper</a></p>
                 </div>
+            </div>
+        </div>
+        <div class="row mt-5">
+            <div class="col-md-12 text-center">
+                <p style="color: var(--text-color); opacity: 0.6; font-size: 0.9rem;">Made with ChatGPT and Claude.</p>
             </div>
         </div>
     </div>
