--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
             right: 0;
             background-color: var(--bg-color);
             padding: 25px 30px;
-            box-shadow: 0 2px 10px var(--header-border);
             z-index: 1000;
             transition: background-color 0.3s ease;
             border-bottom: 1px solid var(--header-border);
@@ -256,6 +255,7 @@
             <a class="icons" href="https://x.com/bcohenwang" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
             <a class="icons" href="https://scholar.google.com/citations?user=QwJR7jEAAAAJ&hl" target="_blank"><i class="fas fa-graduation-cap fa-2x"></i></a>
             <a class="icons" href="https://www.linkedin.com/in/ben-cohen-wang-b8a81211a/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+            <a class="icons" href="https://github.com/bencw99" target="_blank"><i class="fab fa-github fa-2x"></i></a>
         </div>
         <div style="flex: 1"></div>
     </div>
@@ -279,10 +279,10 @@
             <div class="col-md-12 mt-4">
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link active" id="research-tab" data-toggle="tab" href="#research" role="tab" aria-controls="research" aria-selected="true">Selected Papers</a>
+                        <a class="nav-link active" id="research-tab" data-toggle="tab" href="#research" role="tab" aria-controls="research" aria-selected="true">Selected papers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="blog-tab" data-toggle="tab" href="#blog" role="tab" aria-controls="blog" aria-selected="false">Blog Posts</a>
+                        <a class="nav-link" id="blog-tab" data-toggle="tab" href="#blog" role="tab" aria-controls="blog" aria-selected="false">Blog posts</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" id="software-tab" data-toggle="tab" href="#software" role="tab" aria-controls="software" aria-selected="false">Software</a>
@@ -380,11 +380,11 @@
                 </div>
             </div>
         </div>
-        <div class="row mt-5">
+        <!-- <div class="row mt-5">
             <div class="col-md-12 text-center">
                 <p style="color: var(--text-color); opacity: 0.6; font-size: 0.9rem;">Made with ChatGPT and Claude.</p>
             </div>
-        </div>
+        </div> -->
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
