--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         body { 
             font-family: 'Raleway', sans-serif;
-            padding-top: 120px;
+            padding-top: 50px;
             background-color: var(--bg-color);
             color: var(--text-color);
             transition: background-color 0.3s ease, color 0.3s ease;
@@ -68,37 +68,22 @@
             align-items: center;
             justify-content: center;
         }
-        .header-bar {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            background-color: var(--bg-color);
-            padding: 25px 30px;
-            z-index: 1000;
-            transition: background-color 0.3s ease;
-            border-bottom: 1px solid var(--header-border);
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            align-items: center;
-            gap: 15px;
+        .site-header {
+            text-align: center;
+            margin-bottom: 30px;
         }
-        .header-bar h1 {
-            margin: 0;
-            text-align: left;
-            font-size: 2.0rem;
-            flex: 1;
-            min-width: 200px;
+        .site-header h1 {
+            font-size: 2.5rem;
+            margin-bottom: 15px;
         }
         .contact-info {
             display: flex;
             align-items: center;
-            flex: 2;
             justify-content: center;
             font-size: 1.1rem;
             gap: 15px;
             flex-wrap: wrap;
+            margin-bottom: 20px;
         }
         .publication {
             padding: 15px;
@@ -213,24 +198,13 @@
         }
 
         @media (max-width: 768px) {
-            .header-bar {
-                padding: 15px;
-                flex-direction: column;
-                align-items: center;
-                text-align: center;
-            }
-            
-            .header-bar h1 {
-                margin-bottom: 10px;
-            }
-
             .contact-info {
                 justify-content: center;
                 width: 100%;
             }
 
             body {
-                padding-top: 180px;
+                padding-top: 70px;
             }
         }
         .date-badge {
@@ -248,19 +222,18 @@
     gtag('config', 'G-4NLKRMF16H');
 </script>
 <body>
-    <div class="header-bar">
-        <h1>Ben Cohen-Wang</h1>
-        <div class="contact-info">
-            <a class="icons" href="mailto:bencw@mit.edu" target="_blank"><i class="fas fa-envelope fa-2x"></i></a>
-            <a class="icons" href="https://x.com/bcohenwang" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
-            <a class="icons" href="https://scholar.google.com/citations?user=QwJR7jEAAAAJ&hl" target="_blank"><i class="fas fa-graduation-cap fa-2x"></i></a>
-            <a class="icons" href="https://www.linkedin.com/in/ben-cohen-wang-b8a81211a/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
-            <a class="icons" href="https://github.com/bencw99" target="_blank"><i class="fab fa-github fa-2x"></i></a>
-        </div>
-        <div style="flex: 1"></div>
-    </div>
     <button class="theme-toggle" onclick="toggleTheme()"><i class="fas fa-adjust"></i></button>
     <div class="container">
+        <div class="site-header">
+            <h2>Ben Cohen-Wang</h2>
+            <div class="contact-info">
+                <a class="icons" href="mailto:bencw@mit.edu" target="_blank"><i class="fas fa-envelope fa-lg"></i></a>
+                <a class="icons" href="https://x.com/bcohenwang" target="_blank"><i class="fab fa-twitter fa-lg"></i></a>
+                <a class="icons" href="https://scholar.google.com/citations?user=QwJR7jEAAAAJ&hl" target="_blank"><i class="fas fa-graduation-cap fa-lg"></i></a>
+                <a class="icons" href="https://www.linkedin.com/in/ben-cohen-wang-b8a81211a/" target="_blank"><i class="fab fa-linkedin fa-lg"></i></a>
+                <a class="icons" href="https://github.com/bencw99" target="_blank"><i class="fab fa-github fa-lg"></i></a>
+            </div>
+        </div>
         <div class="row">
             <div class="col-md-12 profile-content">
                 <div>
@@ -269,7 +242,7 @@
                         I received my BS in computer science from <a href="https://stanford.edu" target="_blank">Stanford</a>, and spent two great years at <a href="https://robustintelligence.com" target="_blank">Robust Intelligence</a> before starting my PhD.
                     </p>
                     <p>
-                        I am interested in how we can develop machine learning systems that can be safely deployed.
+                        I am interested in how we can develop AI systems that can be safely deployed.
                         Outside of research, I enjoy running, climbing, skiing, tennis and volleyball.
                     </p>
                 </div>
