--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
                 <a class="icons" href="https://scholar.google.com/citations?user=QwJR7jEAAAAJ&hl" target="_blank"><i class="fas fa-graduation-cap fa-lg"></i></a>
                 <a class="icons" href="https://www.linkedin.com/in/ben-cohen-wang-b8a81211a/" target="_blank"><i class="fab fa-linkedin fa-lg"></i></a>
                 <a class="icons" href="https://github.com/bencw99" target="_blank"><i class="fab fa-github fa-lg"></i></a>
+                <a class="icons" href="https://www.strava.com/athletes/95589914" target="_blank"><i class="fab fa-strava fa-lg"></i></a>
             </div>
         </div>
         <div class="row">
@@ -324,6 +325,18 @@
                                 <a href="https://github.com/MadryLab/pretraining-distribution-shift-robustness" target="_blank" class="publication-link-btn">Code</a>
                             </p>
                         </div>
+                        <div class="publication" onclick="window.open('https://arxiv.org/abs/2504.13752', '_blank')">
+                            <h3><a href="https://arxiv.org/abs/2504.13752" target="_blank">Learning to Attribute with Attention</a> <span class="date-badge" style="float: right;">Preprint</span></h3>
+                            <p><strong>Benjamin Cohen-Wang</strong>, Yung-Sung Chuang, Aleksander Mądry</p>
+                            <p>
+                                It can be helpful to pinpoint the in-context information that a language model uses when generating content (Is it using provided documents? Or its own intermediate thoughts?). We present Attribution with Attention (AT2), a method for doing so efficiently and reliably.
+                            </p>
+                            <p onclick="event.stopPropagation()" class="publication-links"> 
+                                <a href="https://arxiv.org/abs/2504.13752" target="_blank" class="publication-link-btn">Paper</a>
+                                <a href="https://bencw99.github.io/at2-citations" target="_blank" class="publication-link-btn">Demo</a>
+                                <a href="https://github.com/MadryLab/AT2" target="_blank" class="publication-link-btn">Code</a>
+                            </p>
+                        </div>
                     </div>
                     
                     <div class="tab-pane fade" id="blog" role="tabpanel" aria-labelledby="blog-tab">
@@ -365,6 +378,19 @@
                                 <a href="https://github.com/MadryLab/context-cite" target="_blank" class="publication-link-btn">GitHub repository</a>
                                 <a href="https://huggingface.co/spaces/contextcite/context-cite" target="_blank" class="publication-link-btn">Hugging Face demo</a>
                                 <a href="https://pypi.org/project/context-cite/" target="_blank" class="publication-link-btn">PyPI package</a>
+                            </p>
+                        </div>
+                        <div class="publication" onclick="window.open('https://github.com/MadryLab/AT2', '_blank')">
+                            <div class="d-flex align-items-center">
+                                <img src="files/images/at2_logo.png" alt="AT2 Logo" class="mr-3" style="border-radius: 5px; max-height: 100px; width: auto; margin-bottom: 15px;">
+                            </div>
+                            <p>
+                                Efficiently attribute generated content to in-context information using attention.
+                            </p>
+                            <p onclick="event.stopPropagation()" class="publication-links"> 
+                                <a href="https://github.com/MadryLab/AT2" target="_blank" class="publication-link-btn">GitHub repository</a>
+                                <a href="https://bencw99.github.io/at2-citations" target="_blank" class="publication-link-btn">Demo</a>
+                                <a href="https://pypi.org/project/at2/" target="_blank" class="publication-link-btn">PyPI package</a>
                             </p>
                         </div>
                     </div>
